<resources>
    <string name="app_name">IG_Connect</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_activity_home_page">HomePage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Community">Community</string>
    <string name="Chats">Chats</string>
    <string name="Profile">Profile</string>
    <string name="click_me">Click Me</string>
    <string name="sample_title">Sample title</string>
    <string name="list_of_communities">List of Communities</string>
    <string name="community_title">Community Title</string>
    <string name="community_description_goes_here">Community description goes here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up_prompt">Don\'t have an account? Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_account">Already have an account? Log In</string>
    <string name="community_posts">Community Posts</string>
    <string name="add_new_post">Add Post</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">type a message</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="user_name">User Name</string>
    <string name="email_example_com">email@example.com</string>

</resources>